--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- Metas -->
     <meta charset="utf-8">
-    <title>SPLIT - PERSONAL VCARD HTML TEMPLATE</title>
+    <title>TAIRO ROBERTO - MOBILE/WEB DEVELOPER</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
